Fix line breaks in resources

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -224,6 +224,8 @@
           margin: $paragraph-margin-bottom auto
           max-width: 3em
           border-radius: 50%
+        a
+          white-space: nowrap
 
       @media #{$small}
         p
